--- a/Frontend/FrontendCrudFuncionarios/FrontendCrudFuncionarios/src/app/components/funcionarios/funcionarios.component.html
+++ b/Frontend/FrontendCrudFuncionarios/FrontendCrudFuncionarios/src/app/components/funcionarios/funcionarios.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table class="thead-dark table table-hover table-bordered mt-5 table-striped">
+    <table class="thead-dark table table-hover table-bordered mt-5">
         <thead class="table-dark">
             <tr>
                 <!-- <th>Id</th> -->
@@ -14,79 +14,275 @@
         <tbody>
             @if(funcionarios.length > 0){
                 @for(funcionario of funcionarios; track $index){
-                    <tr>
-                        <!-- <td>{{funcionario.id}}</td> -->
-                        <td>{{funcionario.nome}}</td>
-                        <td>{{funcionario.sobrenome}}</td>
-                        <td>{{funcionario.departamento}}</td>
-                        <td>{{funcionario.turno}}</td>
-                        <td>
-                            @if(funcionario.ativo){
-                                <span class="badge badge-pill badge-success" style="background-color: green;">Ativo</span>
-                            }
-                            @else{
-                                <span class="badge badge-pill badge-success" style="background-color: orange;">Inativo</span>
-                            }   
+                <tr>
+                    <!-- <td>{{funcionario.id}}</td> -->
+                    <td  [ngClass]="{'fundo-cinza': !funcionario.ativo}">{{funcionario.nome}}</td>
+                    <td [ngClass]="{'fundo-cinza': !funcionario.ativo}">{{funcionario.sobrenome}}</td>
+                    <td [ngClass]="{'fundo-cinza': !funcionario.ativo}">{{funcionario.departamento}}</td>
+                    <td [ngClass]="{'fundo-cinza': !funcionario.ativo}">
 
-                        </td>
-                        <td style="width: 18%;">
-                            
-                            <button type="button" class="btn btn-outline-success btn-sm" >Visualizar</button>
-                            <button type="button" class="btn btn-outline-info btn-sm"  (click)="openModalEditarFuncionario()" >Edit</button>
-                            <button type="button" class="btn btn-outline-danger btn-sm" >Delete</button>
-                            
-                        </td>
-                        
-                    </tr>
+                        <span class="badge badge-pill" [ngStyle]="{'background-color': ObterCorPorTurno(funcionario.turno)}">
+                            {{ obterLabelPorTurno(funcionario.turno) }}
+                        </span>
+                          
+                    </td>
+                    <td [ngClass]="{'fundo-cinza': !funcionario.ativo}">
+                        @if(funcionario.ativo){
+                        <span class="badge badge-pill badge-success" style="background-color: green;">Ativo</span>
+                        }
+                        @else{
+                        <span class="badge badge-pill badge-success" style="background-color: yellow;color: black;   ">Inativo</span>
+                        }
+
+                    </td>
+                    <td style="width: 18%;"  [ngClass]="{'fundo-branco': !funcionario.ativo}">
+
+                        <button type="button" class="btn btn-outline-success btn-sm" >
+                            Visualizar
+                        </button>
+                        <button type="button" class="btn btn-outline-info btn-sm"
+                            (click)="funcionarioEditado = funcionario;openModalEditarFuncionario();">
+                            Edit
+                        </button>
+                        <button type="button" class="btn btn-outline-danger btn-sm"
+                            (click)="openModalExcluirFuncionario(funcionario.id)">
+                            Delete
+                        </button>
+
+                    </td>
+
+                </tr>
                 }
+            }
+            @else{
+            <tr>
+                <td colspan="6" style="text-align: center;">Nenhum funcionário encontrado</td>
+            </tr>
             }
         </tbody>
     </table>
 </div>
 <!-- Modal Editar Funcionario -->
-<div class="modal fade" id="modalEdit" tabindex="-1" aria-labelledby="exampleModalLabel" style="background-color: rgba(0, 0, 0, 0.5);" aria-hidden="true">
+<div class="modal fade" id="modalEdit" tabindex="-1" aria-labelledby="exampleModalLabel"
+    style="background-color: rgba(0, 0, 0, 0.5);" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable  modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeModalEditarFuncionario()"></button>
+                <h5 class="modal-title" id="exampleModalLabel">Editar dados do funcionário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                    (click)="closeModalEditarFuncionario()"></button>
             </div>
             <div class="modal-body">
-            ...
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="nome">
+                                Nome
+                            </label>
+                            <input type="text" class="form-control" id="nomeEditado" name="nomeEditado" [(ngModel)]="funcionarioEditado.nome"
+                             placeholder="Nome">
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="sobrenome">Sobrenome</label>
+                            <input type="text" class="form-control" id="sobrenome" placeholder="Sobrenome" [(ngModel)] = "funcionarioEditado.sobrenome">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="departamento">Departamento<br></label>
+                            <select id="departamento" class="form-select" aria-label="Default select example" [(ngModel)]="funcionarioEditado.departamento"
+                                style="margin-top: 20px;" >
+                                @for(opcao of opcoesDepartamento; track $index){
+                                    <option value="{{opcao.value}}">{{opcao.label}}</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6"
+                        style="align-self: center;display: flex;justify-content: space-around;margin-top:20px;">
+                        <div class="form-check form-switch" style="margin-top: 20px;">
+                            <input class="form-check-input" [(ngModel)]="funcionarioEditado.ativo" type="checkbox" id="flexSwitchCheckDefault">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">Funcionario ativo</label>
+                        </div>
+                    </div>
+                </div>
+                
+
+
+                <div class="row">
+                    <div class="col-md-6" style="margin: 20px;">
+                        <label for="departamento">Turno<br></label>
+                
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="turno" id="turnoManha"
+                                   [(ngModel)]="funcionarioEditado.turno" value="Manha">
+                            <label class="form-check-label" for="turnoManha">
+                                Manhã
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="turno" id="turnoTarde"
+                                   [(ngModel)]="funcionarioEditado.turno" value="Tarde">
+                            <label class="form-check-label" for="turnoTarde">
+                                Tarde
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="turno" id="turnoNoite"
+                                   [(ngModel)]="funcionarioEditado.turno" value="Noite">
+                            <label class="form-check-label" for="turnoNoite">
+                                Noite
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-            (click)="closeModalEditarFuncionario()">
-                Fechar
-            </button>
-            <button type="button" class="btn btn-primary" (click)="closeModalEditarFuncionario()">
-                Salvar
-            </button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                    (click)="closeModalEditarFuncionario()">
+                    Fechar
+                </button>
+                <button type="button" class="btn btn-primary" (click)="closeModalEditarFuncionario();editarFuncionario();">
+                    Salvar
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- modal Adicionar funcionário -->
+<div class="modal fade" id="modalAdd" tabindex="-1" aria-labelledby="exampleModalLabel"
+    style="background-color: rgba(0, 0, 0, 0.5);" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable  modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Cadastrar novo funcionário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+                    (click)="closeModalAdicionarFuncionario()"></button>
+            </div>
+            <div class="modal-body">
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="nome">
+                                Nome
+                            </label>
+                            <input type="text" class="form-control" id="nomeParaAdicionar" name="nomeParaAdicionar" [(ngModel)]="funcionarioParaAdicionar.nome"
+                             placeholder="Nome">
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="sobrenome">Sobrenome</label>
+                            <input type="text" class="form-control" id="sobrenome" placeholder="Sobrenome" [(ngModel)] = "funcionarioParaAdicionar.sobrenome">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label for="departamento">Departamento<br></label>
+                            <select id="departamento" class="form-select" aria-label="Default select example" [(ngModel)]="funcionarioParaAdicionar.departamento"
+                                style="margin-top: 20px;" >
+                                @for(opcao of opcoesDepartamento; track $index){
+                                    <option value="{{opcao.value}}">{{opcao.label}}</option>
+                                }
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6"
+                        style="align-self: center;display: flex;justify-content: space-around;margin-top:20px;">
+                        <div class="form-check form-switch" style="margin-top: 20px;">
+                            <input class="form-check-input" [(ngModel)]="funcionarioParaAdicionar.ativo" type="checkbox" id="flexSwitchCheckDefault">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">Funcionario ativo</label>
+                        </div>
+                    </div>
+                </div>
+                
+
+
+                <div class="row">
+                    <div class="col-md-6" style="margin: 20px;">
+                        <label for="departamentoAdd">Turno<br></label>
+                
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="turno" id="turnoManha"
+                                   [(ngModel)]="funcionarioParaAdicionar.turno" value=0>
+                            <label class="form-check-label" for="turnoManhaAdd">
+                                Manhã
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="turno" id="turnoTarde"
+                                   [(ngModel)]="funcionarioParaAdicionar.turno" value=1>
+                            <label class="form-check-label" for="turnoTardeAdd">
+                                Tarde
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="turno" id="turnoNoite"
+                                   [(ngModel)]="funcionarioParaAdicionar.turno" value=2>
+                            <label class="form-check-label" for="turnoNoiteAdd">
+                                Noite
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+                    (click)="closeModalAdicionarFuncionario();">
+                    Fechar
+                </button>
+                <button type="button" class="btn btn-primary" (click)="adicionarFuncionario();" [disabled]="!funcionarioParaAdicionar.nome || !funcionarioParaAdicionar.sobrenome || !funcionarioParaAdicionar.departamento || !funcionarioParaAdicionar.turno">
+                    Salvar
+                </button>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Modal Editar Funcionario -->
-<!-- <div class="modal fade" id="modalDelete" tabindex="-1" aria-labelledby="exampleModalLabel" style="background-color: rgba(0, 0, 0, 0.5);" aria-hidden="true">
+<!-- Modal modalExcluir Funcionario -->
+<div class="modal fade" id="modalExcluir" tabindex="-1" aria-labelledby="exampleModalLabel" style="background-color: rgba(0, 0, 0, 0.5);" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable  modal-sm">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeModalEditarFuncionario()"></button>
+            <h5 class="modal-title" id="exampleModalLabel">Deletar funcionário</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeModalExcluirFuncionario()"></button>
             </div>
             <div class="modal-body">
             Tem certeza que deseja excluir permanentemente o funcionário?
             </div>
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
-            (click)="closeModalEditarFuncionario()">
-                Fechar
+            (click)="closeModalExcluirFuncionario()">
+                Cancelar
             </button>
-            <button type="button" class="btn btn-primary" (click)="closeModalEditarFuncionario()">
-                Salvar
+            <button type="button" class="btn btn-danger" (click)="closeModalExcluirFuncionario();deletarFuncionario(idFuncionarioParaExcluir);">
+                Confirmar   
             </button>
             </div>
         </div>
     </div>
-</div> -->
+</div>
